Добавлена информация про источник, пишется информация про TAIGA-IACT

--- a/msudipl.cls
+++ b/msudipl.cls
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{msudipl}[2022/02/25 MSU diploma class, v. 0.2.2]
+\ProvidesClass{msudipl}[2022/05/02 MSU diploma class, v. 0.2.4]
 
 %%	ОПИЦИИ КЛАССА msudipl
 %%
@@ -100,6 +100,9 @@
 \geometry{a4paper}					% размер бумаги A4
 \geometry{left=30mm,right=10mm,top=20mm,bottom=20mm}	% поля по ГОСТ 7.32-2001
 
+\RequirePackage[english,russian]{babel}			% указываем, что пользоваться будем русским языком, подгружающая словари переносов, выставляются в соответствии с принятыми нормами отступы, интервалы между словами и пр., а иногда и английским.
+
+
 % подгрузка пакетов для корректного и наиболее полного отображения формул и символов. должен грузиться как можно раньше, т.к. внутри себя определяет шрифты и некоторые прочие настройки, которые несколько не соответствуют тому, что надо.
 \RequirePackage{amsmath}
 
@@ -107,13 +110,10 @@
 	\RequirePackage{amsthm}				% пакет для работы с теоремами и леммами
 	\RequirePackage{amssymb} 			% большое количество специфических математических символов
 \fi
-\usepackage{ dsfont }
-\everymath{\displaystyle}				% отключаем масштабирование символов в многоэтажных дробях, индексах и пределах интегралов в соответствии с традицией русской типографской вёрстки
-\DeclareMathSizes{14}{14}{10}{10}    			% увеличенные размеры символов в формулах (синтаксис {елси не векторный шрифт}{основной текст}{верхний индекс}{нижний индекс})
 
-\RequirePackage[T2A]{fontenc}				% подгрузка расширенной поддержки кириллических шрифтов
-\RequirePackage[utf8]{inputenc}				% прямым текстом указываем, в какой кодировке работаем (UTF8), применение других кодировок (cp1251 или koi8r) вполне допустимо, но не рекомендуемо (cp866 можно, но зачем?)
-\RequirePackage[english,russian]{babel}			% указываем, что пользоваться будем русским языком, подгружающая словари переносов, выставляются в соответствии с принятыми нормами отступы, интервалы между словами и пр., а иногда и английским.
+\RequirePackage{indentfirst}				% заставляет ТеХ делать отступ в первом абзаце главы/параграфа/раздела
+\setlength{\parindent}{1.25cm}				% настройка отступов
+\RequirePackage{graphicx}				% Подключаем пакет работы с графикой
 
 % включание шрифтов
 \IfFileExists{./font/TimesNewRoman-Regular.otf}{
@@ -129,14 +129,12 @@
 	\RequirePackage{fontspec}
 	\setmainfont{Times New Roman}
 	}
-}		
+}	
 
-\DeclareSymbolFont{operators}{OT1}{\rmdefault}{m}{n}
-\SetSymbolFont{operators}{normal}{OT1}{\rmdefault}{x}{n}	% переключаем шрифт начертания операторов и цифр (они в душе тоже операторы) на ту же нарнитуру, что и основной текст
+%\SetMathAlphabet{\mathnormal}{normal}{OML}{ptmcm}{m}{it}
 
-\RequirePackage{indentfirst}				% заставляет ТеХ делать отступ в первом абзаце главы/параграфа/раздела
-\setlength{\parindent}{1.25cm}				% настройка отступов
-\RequirePackage{graphicx}				% Подключаем пакет работы с графикой
+\DeclareSymbolFont{letters}{OML}{ztmcm}{m}{n}
+\DeclareSymbolFont{operators}{OT1}{\familydefault}{m}{n}	% переключаем шрифт начертания операторов и цифр (они в душе тоже операторы) на ту же нарнитуру, что и основной текст
 
 %увеличение шрифта с 12 pt по умолчанию, на 14 pt и полуторный интервал!
 \renewcommand{\tiny}{\fontsize{7}{10.5pt}\selectfont}
@@ -148,6 +146,8 @@
 \renewcommand{\Large}{\fontsize{20}{30pt}\selectfont}
 \newcommand{\sectitlesize}{\fontsize{16}{24pt}\selectfont}
 \newcommand{\chaptersize}{\fontsize{18}{27pt}\selectfont}
+
+\DeclareMathSizes{14}{14.25}{10}{10}    			% увеличенные размеры символов в формулах (синтаксис {если не векторный шрифт}{основной текст}{верхний индекс}{нижний индекс})
 
 
 \RequirePackage{appendix} %управление стилями загловков в приложениях
@@ -170,7 +170,7 @@
 	\SetProtrusion
 	{
 		encoding = TU,
-		family = \rmdefault   % тут указываем тот шрифт, который непосредственно используется. по-умолчанию это faq, но мы выше, после вызова pscyr, выбрали этот шрифт
+		family = \rmdefault   % тут указываем тот шрифт, который непосредственно используется
 	}
 	{
 		« = {1000,   },         % формат команды простой (если вам зачем-то понадобится ещё): _символ_ = {_снос влево в промиле от ширины символа, когда символ стоит в начале строки_ . снос вправо, когда символ стоит в конце строки_ }
