Начинаю писать методику работы с данными, добавил информацию про спектр источника

--- a/main.tex
+++ b/main.tex
@@ -160,7 +160,7 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 
 \begin{figure}[th]
 	\noindent\centering{
-		\includegraphics[width=120mm]{figs/four_mechanisms.png}
+		\includegraphics[width=\textwidth]{figs/four_mechanisms.png}
 	}
 	\caption{Четыре механизма возникновения $\gamma$-квантов}
 	\label{pic:four_mechanisms}
@@ -251,7 +251,27 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 
 Несколько ярких источников $\gamma$-излучения с энергией свыше нескольких ТэВ было обнаружено обсерваторией MILAGRO. Ярчайшим из них оказался MGRO J2019+37, поток излучения которого при $E=20~\text{ТэВ}$ составляет 80\% от потока Крабовидной туманности при этой же энергии. Позже область исследовалась проектами MAGIC, VERITAS и Tibet Air Shower. По результатам длительных  наблюдений на VERITAS (\textit{ссылка на Aliu et al 2014}) источник был разложен на малый точечный источник VER J2016+371 и широкий источник VER J2019+368. Последний источник был связан, в том числе, с пульсарной туманностью PWN G75.2+0.1, подпитываемой находящимся рядом пульсаром PSR J2021+3651. В силу сложной структуры VER J2019+368 нельзя однозначно заключить, что излучение исходит исключительно из PWN, однако исследования спектра и внутреннего источника  по данным космических спектрометров Suzaku-XIS и XMM-Newton показали, что пульсар PSR J2021+3651 вносит вклад в 80\% излучения (\textit{ссылка на Mizuno et al., 2017b}). 
 
-По наблюдениям обсерватории HAWC (High-Altitude Water Cherenkov) источник связан с 2HWC J2019+367 и eHAWC J2019+368, определён спектр излучаемых им $\gamma$-квантов (\textit{ссылка на Abeysekara et al, Albert 1et al})
+Название 'Dragonfly Nebula\footnote{англ.~\textit{Dragonfly} --- стрекоза.}' было дано туманности вокруг PSR J2021+3651 из-за вытянутой эллиптической формы с длинным джетом-хвостом по изображениям с рентген-спектрометра Chandra ASIC (\textit{ссылка на статью Ван Эттерна, 2008}). 
+
+По данным наблюдений обсерватории HAWC (High-Altitude Water Cherenkov) источник связан с 2HWC J2019+367 и eHAWC J2019+368, определён спектр (рис.~\ref{pic:HAWCJ2019368Spectra}) \afterpage{\clearpage} излучаемых им $\gamma$-квантов (\textit{ссылка на Abeysekara et al, Albert 1et al}). В отчёте проекта приводится степенной спектр с экспоненциальным обрезанием хвоста:
+\[
+\begin{aligned}
+&J(E)=\phi_{10\,TeV} \cdot\left(\frac{E}{10~\text{ТэВ}}\right)^{-\Gamma} \exp \left(-\frac{E}{E_{cut}}\right),\\
+&\text{с соответствующими параметрами:}\\
+&\phi_{10\,TeV} = 4,\!8^{+0{,}5}_{-0{,}4}\cdot 10^{-14}~\text{($\text{см}^2\cdot \text{c}\cdot \text{ТэВ})^{-1}$ --- поток при $E = 10$~ТэВ},\\
+&\Gamma=-1{,}67\pm 0,\!10 \text{ --- показатель спектра},\\
+&E_{cut} = 37^{+8}_{-7} \text{ ТэВ --- показатель экспоненциального обрезания}
+\end{aligned}
+\]
+
+\begin{figure}[b]
+	\noindent\centering{
+		\includegraphics[width=0.8\textwidth]{figs/HAWCJ2019368Spectra.png}
+	}
+	\caption{Спектры J2018+368, полученные проектами VERITAS и HAWC, а также аппроксимация от HAWC}
+	\label{pic:HAWCJ2019368Spectra}
+\end{figure}
+
 \chapter{Эксперимент TAIGA}
 \section{Основные сведения}
 \subsection{Географические сведения}
@@ -268,9 +288,9 @@ p_{CR}+p_{ap}\rightarrow\pi^0+X\rightarrow \gamma+\gamma.
 \textit{
 Здесь будет описано устройство телескопа TAIGA-IACT, его физические характеристики, системы электроники камеры и обработки сигналов
 }
-TAIGA-IACT представляет из себя атмосферный черенковский телескоп с альт-азимутальной подвижной платформой и параболическим отражателем с диаметром 4,3~м. Отражатель состоит из сферических зеркал и имеет общую площадь поверхности 8,5~$\text{м}^\text{2}$. Фокусное расстояние отражателя составляет 4,75~м, в фокальной плоскости на штангах размещена регистрирующая камера с электроникой и ФЭУ. Камера в отсутствие наблюдения закрыта рольставнями. Каждый телескоп дополнительно оборудован ПЗС-камерой для отслеживания положения телескопа во время наблюдений (\textit{ссылка на статью Журова}). 
+TAIGA-IACT представляет из себя атмосферный черенковский телескоп с альт-азимутальной подвижной платформой и параболическим отражателем с диаметром 4,3~м. Отражатель состоит из сферических зеркал и имеет общую площадь поверхности 8,5~$\text{м}^\text{2}$. Фокусное расстояние отражателя составляет 4,75~м, в фокальной плоскости на штангах размещена регистрирующая камера с электроникой и ФЭУ. Камера в отсутствие наблюдения закрыта рольставнями. Каждый телескоп дополнительно оборудован ПЗС-камерой для отслеживания положения телескопа во время наблюдений (\textit{ссылка на статью Журова}). По периметру камеры установлены 8 светодиодов для определения положения камеры на изображениии с ПЗС-камеры. Подвижная платформа оборудована моторами, позволяющими повернуть телескоп по азимуту на $9\cdot10^{-4}~^{\circ}$ за один такт мотора. 
 
-На момент апреля 2022~г. комплекс TAIGA включает в себя три телескопа TAIGA-IACT 
+На момент апреля 2022~г. комплекс TAIGA включает в себя три телескопа TAIGA-IACT (IACT01, IACT02, IACT03), камеры каждого из которых имеют обзор $9,\!6^{\circ}\times9,\!6^{\circ}$. Матрицы камер состоят из 560--600 пикселей ФЭУ, расположенных в шестигранной сетке. Каждый ФЭУ дополнительно оснащён конусом Винстона, повышающим эффективность светосбора. Угловой размер каждого пикселя составляет $0,\!36^{\circ}$. Пиксели сгруппированы в кластеры: центральные кластеры состоят из 28 пикселей, периферийные из 21 и 14. Управление и обработка сигналов ведётся с помощью 64-канальной микросхемы ASIC MAROC3. Каждая группа по 7 ФЭУ в кластерах расположена на плате делителей высокого напряжения, которую обслуживает высоковольтный источник питания. 
 \section{Возможности TAIGA по наблюдению источника HAWC J2019+368}
 \textit{
 Здесь будут приведены оценки числа гамма-квантов, регистрируемых от источника за 100 часов наблюдения, будут описаны возможности комплекса TAIGA по его регистрации
@@ -300,12 +320,29 @@ $\mathbf{x}\in \mathds{R}^n$. К задаче \textit{классификации
 
 \section{Случайный лес}
 \subsection{Решающие деревья}
-В основе метода случайного леса лежит модель решающего дерева. Событие описывается набором параметров Хилласа, и ему соответствует вектор в многомерном пространстве. Помимо этого событию соответсвует величина $h$, называемая \textit{адронностью}, и обозначающая класс события (для $\gamma$-кванта $h=0$, для адрона $h = 1$). Двоичное 
+В основе метода случайного леса лежит модель решающего дерева. Событие описывается набором параметров Хилласа, и ему соответствует вектор в многомерном пространстве. Помимо этого событию соответствует величина $h$, называемая \textit{адронностью}, и обозначающая класс события (для $\gamma$-кванта $h=0$, для адрона $h = 1$). Двоичное решающее дерево 
 \subsection{Модификации}
 \subsection{Random Forest в гамма-астрономии}
 
 \chapter{Методика работы с данными}
 \textit{Здесь будет разобрана методика обработки данных телескопов TAIGA-IACT от первичного клининга и поиска совместных событий до выделения гамма-сигнала с помощью обычных порогов и с помощью Random Forest.}
+\section{Обработка первичных данных}
+После выработки триггера камеры для каждого кластера сохраняется набор амплитуд каждого пикселя ФЭУ в кодах АЦП. На IACT01 сохраняются только те кластеры, для которых сработал триггер, на IACT02 сохраняется состояние всей камеры. Сохранённые коды АЦП представляют сумму полезного сигнала и пьедестала ФЭУ. Под пьедесталом подразумевается средняя амплитуда, которая поступает на АЦП с пикселя в отсутвие света. Наличие и величина пьедестала обуславливается вкладом АЦП, темновым током АЦП, тепловыми и электронными шумами и иными факторами. 
+
+Значение пьедестала подвержено изменениям в течение сеанса наблюдений из-за изменения температуры, поэтому средний пьедестал пикселя вычисляется отдельно после каждой порции получения данных, длящейся приблизительно 2~минуты. Для каждого пискселя находится медианное значение нетриггерных амплитуд, а шумящие пиксели отключаются от триггера камеры, чтобы не вызывать запись событий без сигнала. Полезный сигнал после вычисления пьедесталов ФЭУ считается как
+\begin{equation}
+S_{p}=A_{\text {АЦП }}-A_{P E D},
+\end{equation}
+где $S_p$ --- полезный сигнал, $A_{\text{АЦП}}$ --- амплитуда на выходе АЦП, $A_{PED}$ --- вычисленная амплитуда пьедестала.
+
+Переход от амплитуд сигналов в кодах АЦП к сигналам в фотоэлектронах осуществляется  по результатам калибровок, во время которых все пиксели камеры равномерно освещаются светодиодом (\textit{ссылка на статью Нимы ICRC2017}).  Ведётся набор статистики сигнальных и пьедестальных событий, строится распределение по амплитуде. Для пьедестала со средним значением $A$ и среднеквадратичного отклонения распределения амплитуд $\sigma$ число фотоэлектронов $N_{pe}$ определяется по формуле
+\begin{equation}
+\frac{\sigma}{A}=\frac{\sqrt{B}}{\sqrt{N_{p e}}}.
+\end{equation}
+
+Здесь константа $B\approx1{,}3$.
+
+
 \chapter{Обработка результатов}
 \textit{Будут представлены полученные результаты с помощью двух алгоритмов. }
 \phantomsection
