--- a/thesis.bib
+++ b/thesis.bib
@@ -1,275 +1,75 @@
 % Encoding: UTF-8
-@article{Wiegand2019,
-  author    = {Martin Wiegand and Saralees Nadarajah},
-  journal   = {Communications in Statistics - Simulation and Computation},
-  title     = {{MEPDF}: Multivariate empirical density functions},
-  year      = {2019},
-  month     = {jan},
-  number    = {2},
-  pages     = {367--375},
-  volume    = {50},
-  doi       = {10.1080/03610918.2018.1554118},
-  publisher = {Informa {UK} Limited},
-}
-@article{brochu2010tutorial,
-  title={A tutorial on Bayesian optimization of expensive cost functions, with application to active user modeling and hierarchical reinforcement learning},
-  author={Brochu, Eric and Cora, Vlad M and De Freitas, Nando},
-  journal={arXiv preprint arXiv:1012.2599},
-  year={2010}
-}
 
-@article{Buchmüller:984122,
-      author        = "Buchmüller, W and Lüdeling, C",
-      title         = "{Field Theory and Standard Model}",
-      reportNumber  = "hep-ph/0609174, DESY-06-151, DESY-2006-151",
-      pages         = "70 p",
-      month         = "Sep",
-      year          = "2006",
-      url           = "https://cds.cern.ch/record/984122",
-      doi           = "10.5170/CERN-2006-014.1",
+@article{doi:10.1126/science.1164718,
+	author = {E. Aliu  and H. Anderhub  and L. A. Antonelli  and P. Antoranz  and M. Backes  and C. Baixeras  and J. A. Barrio  and H. Bartko  and D. Bastieri  and J. K. Becker  and W. Bednarek  and K. Berger  and E. Bernardini  and C. Bigongiari  and A. Biland  and R. K. Bock  and G. Bonnoli  and P. Bordas  and V. Bosch-Ramon  and T. Bretz  and I. Britvitch  and M. Camara  and E. Carmona  and A. Chilingarian  and S. Commichau  and J. L. Contreras  and J. Cortina  and M. T. Costado  and S. Covino  and V. Curtef  and F. Dazzi  and A. De Angelis  and E. De Cea del Pozo  and R. de los Reyes  and B. De Lotto  and M. De Maria  and F. De Sabata  and C. Delgado Mendez  and A. Dominguez  and D. Dorner  and M. Doro  and D. Elsässer  and M. Errando  and M. Fagiolini  and D. Ferenc  and E. Fernandez  and R. Firpo  and M. V. Fonseca  and L. Font  and N. Galante  and R. J. Garcia Lopez  and M. Garczarczyk  and M. Gaug  and F. Goebel  and D. Hadasch  and M. Hayashida  and A. Herrero  and D. Höhne  and J. Hose  and C. C. Hsu  and S. Huber  and T. Jogler  and D. Kranich  and A. La Barbera  and A. Laille  and E. Leonardo  and E. Lindfors  and S. Lombardi  and F. Longo  and M. Lopez  and E. Lorenz  and P. Majumdar  and G. Maneva  and N. Mankuzhiyil  and K. Mannheim  and L. Maraschi  and M. Mariotti  and M. Martinez  and D. Mazin  and M. Meucci  and M. Meyer  and J. M. Miranda  and R. Mirzoyan  and M. Moles  and A. Moralejo  and D. Nieto  and K. Nilsson  and J. Ninkovic  and N. Otte  and I. Oya  and R. Paoletti  and J. M. Paredes  and M. Pasanen  and D. Pascoli  and F. Pauss  and R. G. Pegna  and M. A. Perez-Torres  and M. Persic  and L. Peruzzo  and A. Piccioli  and F. Prada  and E. Prandini  and N. Puchades  and A. Raymers  and W. Rhode  and M. Ribó  and J. Rico  and M. Rissi  and A. Robert  and S. Rügamer  and A. Saggion  and T. Y. Saito  and M. Salvati  and M. Sanchez-Conde  and P. Sartori  and K. Satalecka  and V. Scalzotto  and V. Scapin  and T. Schweizer  and M. Shayduk  and K. Shinozaki  and S. N. Shore  and N. Sidro  and A. Sierpowska-Bartosik  and A. Sillanpää  and D. Sobczynska  and F. Spanier  and A. Stamerra  and L. S. Stark  and L. Takalo  and F. Tavecchio  and P. Temnikov  and D. Tescaro  and M. Teshima  and M. Tluczykont  and D. F. Torres  and N. Turini  and H. Vankov  and A. Venturini  and V. Vitale  and R. M. Wagner  and W. Wittek  and V. Zabalza  and F. Zandanel  and R. Zanin  and J. Zapatero  and O.C. de Jager  and E. de Ona Wilhelmi },
+	title = {Observation of Pulsed \&\#x3b3;-Rays Above 25 GeV from the Crab Pulsar with MAGIC},
+	journal = {Science},
+	volume = {322},
+	number = {5905},
+	pages = {1221-1224},
+	year = {2008},
+	doi = {10.1126/science.1164718},
+	URL = {https://www.science.org/doi/abs/10.1126/science.1164718},
+	eprint = {https://www.science.org/doi/pdf/10.1126/science.1164718},
+	abstract = {One fundamental question about pulsars concerns the mechanism of their pulsed electromagnetic emission. Measuring the high-end region of a pulsar's spectrum would shed light on this question. By developing a new electronic trigger, we lowered the threshold of the Major Atmospheric γ-ray Imaging Cherenkov (MAGIC) telescope to 25 giga–electron volts. In this configuration, we detected pulsed γ-rays from the Crab pulsar that were greater than 25 giga–electron volts, revealing a relatively high cutoff energy in the phase-averaged spectrum. This indicates that the emission occurs far out in the magnetosphere, hence excluding the polar-cap scenario as a possible explanation of our measurement. The high cutoff energy also challenges the slot-gap scenario.}}
+
+@article{Lubsandorzhiev:2017oi,
+  author = "Lubsandorzhiev, Nima  and  Astapov, I.  and  Bezyazeekov, Pavel  and  Boreyko, V.  and  Borodin, A.  and  Brueckner, M.  and  Budnev, N.  and  Chiavassa, A.  and  Dyachok, Aleksei Nikolaevich  and  Fedorov, O.  and  Gafarov, Aleksandr  and  Garmash, A.  and  Gorbunov, N.  and  Grebenyuk, Victor  and  Gress, O.  and  Gress, T.  and  Grishin, O.  and  Grinyuk, A.  and  Horns, D.  and  Igoshin, A.  and  Ivanova, A.  and  Kalmykov, N.  and  Kazarina, Y.  and  Kindin, V.  and  Kirilenko, P.  and  Kiryuhin, S.  and  Kokoulin, R.  and  Kompaniets, K.  and  Korosteleva, E.  and  Kozhin, Vladimir V  and  Kravchenko, E.  and  Kunnas, M.  and  Kuzmichev, L.  and  Lemeshev, Yu.  and  Lenok, V.  and  Lubsandorzhiev, B.  and  Mirgazov, Rashid  and  Mirzoyan, Razmik  and  Monkhoev, R.  and  Nachtigall, R.  and  Osipova, E.  and  Pakhorukov, A.  and  Panasyuk, M. I.  and  Pankov, Leonid  and  Petrukhin, A.  and  Poleschuk, V.  and  Popescu, E.  and  Popova, E.  and  Porelli, A.  and  Postnikov, E.  and  Prosin, V.  and  Ptuskin, V.  and  Rjabov, Evgenii V  and  Rubtsov, G.  and  Pushnin, A.  and  Sagan, Yaroslav  and  Sabirov, B.  and  Samoliga, V.  and  Semeney, Yu.  and  Silaev, A.  and  Silaev(junior), A.  and  Sidorenkov, A.  and  Skurihin, Aleksandr Vasilevich  and  Slunecka, V.  and  Sokolov, A. V.  and  Spiering, C.  and  Sveshnikova, L.  and  Tabolenko, V.  and  Tarashansky, B.  and  Tkachenko, A.  and  Tkachev, L.  and  Tluczykont, M.  and  Wischnewski, R.  and  Zagorodnikov, Aleksey  and  Zhurov, D.  and  Zurbanov, Valery  and  Yashin, I.",
+  title = "{Camera of the first TAIGA-IACT: construction and calibration}",
+  doi = "10.22323/1.301.0757",
+  journal = "PoS",
+  year = 2017,
+  volume = "ICRC2017",
+  pages = "757"
 }
 
-@article{ForemanMackey2016,
-  author    = {Daniel Foreman-Mackey},
-  journal   = {The Journal of Open Source Software},
-  title     = {corner.py: Scatterplot matrices in Python},
-  year      = {2016},
-  month     = {6},
-  number    = {2},
-  pages     = {24},
-  volume    = {1},
-  doi       = {10.21105/joss.00024},
-  publisher = {The Open Journal},
-}
-@Article{Penrose1956,
-  author    = {R. Penrose},
-  journal   = {Mathematical Proceedings of the Cambridge Philosophical Society},
-  title     = {On best approximate solutions of linear matrix equations},
-  year      = {1956},
-  month     = {jan},
-  number    = {1},
-  pages     = {17--19},
-  volume    = {52},
-  doi       = {10.1017/s0305004100030929},
-  publisher = {Cambridge University Press ({CUP})},
-}
-
-
-@article{PhysRevLett.126.141801,
-  title = {Measurement of the Positive Muon Anomalous Magnetic Moment to 0.46 ppm},
-  author = {Abi, B. and Albahri, T. and Al-Kilani, S. and Allspach, D. and Alonzi, L. P. and Anastasi, A. and Anisenkov, A. and Azfar, F. and Badgley, K. and Bae\ss{}ler, S. and Bailey, I. and Baranov, V. A. and Barlas-Yucel, E. and Barrett, T. and Barzi, E. and Basti, A. and Bedeschi, F. and Behnke, A. and Berz, M. and Bhattacharya, M. and Binney, H. P. and Bjorkquist, R. and Bloom, P. and Bono, J. and Bottalico, E. and Bowcock, T. and Boyden, D. and Cantatore, G. and Carey, R. M. and Carroll, J. and Casey, B. C. K. and Cauz, D. and Ceravolo, S. and Chakraborty, R. and Chang, S. P. and Chapelain, A. and Chappa, S. and Charity, S. and Chislett, R. and Choi, J. and Chu, Z. and Chupp, T. E. and Convery, M. E. and Conway, A. and Corradi, G. and Corrodi, S. and Cotrozzi, L. and Crnkovic, J. D. and Dabagov, S. and De Lurgio, P. M. and Debevec, P. T. and Di Falco, S. and Di Meo, P. and Di Sciascio, G. and Di Stefano, R. and Drendel, B. and Driutti, A. and Duginov, V. N. and Eads, M. and Eggert, N. and Epps, A. and Esquivel, J. and Farooq, M. and Fatemi, R. and Ferrari, C. and Fertl, M. and Fiedler, A. and Fienberg, A. T. and Fioretti, A. and Flay, D. and Foster, S. B. and Friedsam, H. and Frle\ifmmode \check{z}\else \v{z}\fi{}, E. and Froemming, N. S. and Fry, J. and Fu, C. and Gabbanini, C. and Galati, M. D. and Ganguly, S. and Garcia, A. and Gastler, D. E. and George, J. and Gibbons, L. K. and Gioiosa, A. and Giovanetti, K. L. and Girotti, P. and Gohn, W. and Gorringe, T. and Grange, J. and Grant, S. and Gray, F. and Haciomeroglu, S. and Hahn, D. and Halewood-Leagas, T. and Hampai, D. and Han, F. and Hazen, E. and Hempstead, J. and Henry, S. and Herrod, A. T. and Hertzog, D. W. and Hesketh, G. and Hibbert, A. and Hodge, Z. and Holzbauer, J. L. and Hong, K. W. and Hong, R. and Iacovacci, M. and Incagli, M. and Johnstone, C. and Johnstone, J. A. and Kammel, P. and Kargiantoulakis, M. and Karuza, M. and Kaspar, J. and Kawall, D. and Kelton, L. and Keshavarzi, A. and Kessler, D. and Khaw, K. S. and Khechadoorian, Z. and Khomutov, N. V. and Kiburg, B. and Kiburg, M. and Kim, O. and Kim, S. C. and Kim, Y. I. and King, B. and Kinnaird, N. and Korostelev, M. and Kourbanis, I. and Kraegeloh, E. and Krylov, V. A. and Kuchibhotla, A. and Kuchinskiy, N. A. and Labe, K. R. and LaBounty, J. and Lancaster, M. and Lee, M. J. and Lee, S. and Leo, S. and Li, B. and Li, D. and Li, L. and Logashenko, I. and Lorente Campos, A. and Luc\`a, A. and Lukicov, G. and Luo, G. and Lusiani, A. and Lyon, A. L. and MacCoy, B. and Madrak, R. and Makino, K. and Marignetti, F. and Mastroianni, S. and Maxfield, S. and McEvoy, M. and Merritt, W. and Mikhailichenko, A. A. and Miller, J. P. and Miozzi, S. and Morgan, J. P. and Morse, W. M. and Mott, J. and Motuk, E. and Nath, A. and Newton, D. and Nguyen, H. and Oberling, M. and Osofsky, R. and Ostiguy, J.-F. and Park, S. and Pauletta, G. and Piacentino, G. M. and Pilato, R. N. and Pitts, K. T. and Plaster, B. and Po\ifmmode \check{c}\else \v{c}\fi{}ani\ifmmode \acute{c}\else \'{c}\fi{}, D. and Pohlman, N. and Polly, C. C. and Popovic, M. and Price, J. and Quinn, B. and Raha, N. and Ramachandran, S. and Ramberg, E. and Rider, N. T. and Ritchie, J. L. and Roberts, B. L. and Rubin, D. L. and Santi, L. and Sathyan, D. and Schellman, H. and Schlesier, C. and Schreckenberger, A. and Semertzidis, Y. K. and Shatunov, Y. M. and Shemyakin, D. and Shenk, M. and Sim, D. and Smith, M. W. and Smith, A. and Soha, A. K. and Sorbara, M. and St\"ockinger, D. and Stapleton, J. and Still, D. and Stoughton, C. and Stratakis, D. and Strohman, C. and Stuttard, T. and Swanson, H. E. and Sweetmore, G. and Sweigart, D. A. and Syphers, M. J. and Tarazona, D. A. and Teubner, T. and Tewsley-Booth, A. E. and Thomson, K. and Tishchenko, V. and Tran, N. H. and Turner, W. and Valetov, E. and Vasilkova, D. and Venanzoni, G. and Volnykh, V. P. and Walton, T. and Warren, M. and Weisskopf, A. and Welty-Rieger, L. and Whitley, M. and Winter, P. and Wolski, A. and Wormald, M. and Wu, W. and Yoshikawa, C.},
-  collaboration = {Muon $g\ensuremath{-}2$ Collaboration},
-  journal = {Phys. Rev. Lett.},
-  volume = {126},
-  issue = {14},
-  pages = {141801},
-  numpages = {11},
-  year = {2021},
-  month = {Apr},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.126.141801},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.126.141801}
-}
-
-@article{aaij2021test,
-  title={Test of lepton universality in beauty-quark decays},
-  author={Aaij, Roel and Beteta, C Abell{\'a}n and Ackernley, Thomas and Adeva, Bernardo and Adinolfi, Marco and Afsharnia, Hossein and Aidala, Christine Angela and Aiola, Salvatore and Ajaltouni, Ziad and Akar, Simon and others},
-  journal={arXiv preprint arXiv:2103.11769},
-  year={2021}
-}
-
-@book{Langacker2017,
-  doi = {10.1201/b22175},
-  url = {https://doi.org/10.1201/b22175},
-  year = {2017},
-  month = jun,
-  publisher = {{CRC} Press},
-  author = {Paul Langacker},
-  title = {The Standard Model and Beyond}
-}
-
-@book{Gorbunov,
-  year = {2008},
-  publisher = {М.: Издательство ЛКИ},
-  author = {Д.С. Горбунов, В.А. Рубаков},
-  title = {Введение в теорию ранней Вселенной: Теория горячего Большого взрыва}
-}
-
-@article{fukugita2002resurrection,
-  title={Resurrection of grand unified theory baryogenesis},
-  author={Fukugita, M and Yanagida, T},
-  journal={Physical review letters},
-  volume={89},
-  number={13},
-  pages={131602},
-  year={2002},
-  publisher={APS}
-}
-
-@article{fukuda1998evidence,
-  title={Evidence for oscillation of atmospheric neutrinos},
-  author={Fukuda, Yoshiyuki and Hayakawa, T and Ichihara, E and Inoue, K and Ishihara, K and Ishino, Hirokazu and Itow, Y and Kajita, T and Kameda, J and Kasuga, S and others},
-  journal={Physical Review Letters},
-  volume={81},
-  number={8},
-  pages={1562},
-  year={1998},
-  publisher={APS}
-}
-
-@article{ahmed2004measurement,
-  title={Measurement of the Total Active B 8 Solar Neutrino Flux at the Sudbury Neutrino Observatory with Enhanced Neutral Current Sensitivity},
-  author={Ahmed, SNea and Anthony, AE and Beier, EW and Bellerive, Alain and Biller, SD and Boger, J and Boulay, Mark Guy and Bowler, MG and Bowles, TJ and Brice, SJ and others},
-  journal={Physical review letters},
-  volume={92},
-  number={18},
-  pages={181301},
-  year={2004},
-  publisher={APS}
-}
-
-@article{eguchi2004high,
-  title={High Sensitivity Search for $\nu$ e’s from the Sun and Other Sources at KamLAND},
-  author={Eguchi, K and Enomoto, S and Furuno, K and Ikeda, H and Ikeda, K and Inoue, K and Ishihara, K and Iwamoto, T and Kawashima, T and Kishimoto, Y and others},
-  journal={Physical review letters},
-  volume={92},
-  number={7},
-  pages={071301},
-  year={2004},
-  publisher={APS}
-}
-
-@article{PhysRevD.98.030001,
-  title = {Review of Particle Physics},
-  author = {Tanabashi, M. and Hagiwara, K. and Hikasa, K. and Nakamura, K. and Sumino, Y. and Takahashi, F. and Tanaka, J. and Agashe, K. and Aielli, G. and Amsler, C. and Antonelli, M. and Asner, D. M. and Baer, H. and Banerjee, Sw. and Barnett, R. M. and Basaglia, T. and Bauer, C. W. and Beatty, J. J. and Belousov, V. I. and Beringer, J. and Bethke, S. and Bettini, A. and Bichsel, H. and Biebel, O. and Black, K. M. and Blucher, E. and Buchmuller, O. and Burkert, V. and Bychkov, M. A. and Cahn, R. N. and Carena, M. and Ceccucci, A. and Cerri, A. and Chakraborty, D. and Chen, M.-C. and Chivukula, R. S. and Cowan, G. and Dahl, O. and D'Ambrosio, G. and Damour, T. and de Florian, D. and de Gouv\^ea, A. and DeGrand, T. and de Jong, P. and Dissertori, G. and Dobrescu, B. A. and D'Onofrio, M. and Doser, M. and Drees, M. and Dreiner, H. K. and Dwyer, D. A. and Eerola, P. and Eidelman, S. and Ellis, J. and Erler, J. and Ezhela, V. V. and Fetscher, W. and Fields, B. D. and Firestone, R. and Foster, B. and Freitas, A. and Gallagher, H. and Garren, L. and Gerber, H.-J. and Gerbier, G. and Gershon, T. and Gershtein, Y. and Gherghetta, T. and Godizov, A. A. and Goodman, M. and Grab, C. and Gritsan, A. V. and Grojean, C. and Groom, D. E. and Gr\"unewald, M. and Gurtu, A. and Gutsche, T. and Haber, H. E. and Hanhart, C. and Hashimoto, S. and Hayato, Y. and Hayes, K. G. and Hebecker, A. and Heinemeyer, S. and Heltsley, B. and Hern\'andez-Rey, J. J. and Hisano, J. and H\"ocker, A. and Holder, J. and Holtkamp, A. and Hyodo, T. and Irwin, K. D. and Johnson, K. F. and Kado, M. and Karliner, M. and Katz, U. F. and Klein, S. R. and Klempt, E. and Kowalewski, R. V. and Krauss, F. and Kreps, M. and Krusche, B. and Kuyanov, Yu. V. and Kwon, Y. and Lahav, O. and Laiho, J. and Lesgourgues, J. and Liddle, A. and Ligeti, Z. and Lin, C.-J. and Lippmann, C. and Liss, T. M. and Littenberg, L. and Lugovsky, K. S. and Lugovsky, S. B. and Lusiani, A. and Makida, Y. and Maltoni, F. and Mannel, T. and Manohar, A. V. and Marciano, W. J. and Martin, A. D. and Masoni, A. and Matthews, J. and Mei\ss{}ner, U.-G. and Milstead, D. and Mitchell, R. E. and M\"onig, K. and Molaro, P. and Moortgat, F. and Moskovic, M. and Murayama, H. and Narain, M. and Nason, P. and Navas, S. and Neubert, M. and Nevski, P. and Nir, Y. and Olive, K. A. and Pagan Griso, S. and Parsons, J. and Patrignani, C. and Peacock, J. A. and Pennington, M. and Petcov, S. T. and Petrov, V. A. and Pianori, E. and Piepke, A. and Pomarol, A. and Quadt, A. and Rademacker, J. and Raffelt, G. and Ratcliff, B. N. and Richardson, P. and Ringwald, A. and Roesler, S. and Rolli, S. and Romaniouk, A. and Rosenberg, L. J. and Rosner, J. L. and Rybka, G. and Ryutin, R. A. and Sachrajda, C. T. and Sakai, Y. and Salam, G. P. and Sarkar, S. and Sauli, F. and Schneider, O. and Scholberg, K. and Schwartz, A. J. and Scott, D. and Sharma, V. and Sharpe, S. R. and Shutt, T. and Silari, M. and Sj\"ostrand, T. and Skands, P. and Skwarnicki, T. and Smith, J. G. and Smoot, G. F. and Spanier, S. and Spieler, H. and Spiering, C. and Stahl, A. and Stone, S. L. and Sumiyoshi, T. and Syphers, M. J. and Terashi, K. and Terning, J. and Thoma, U. and Thorne, R. S. and Tiator, L. and Titov, M. and Tkachenko, N. P. and T\"ornqvist, N. A. and Tovey, D. R. and Valencia, G. and Van de Water, R. and Varelas, N. and Venanzoni, G. and Verde, L. and Vincter, M. G. and Vogel, P. and Vogt, A. and Wakely, S. P. and Walkowiak, W. and Walter, C. W. and Wands, D. and Ward, D. R. and Wascko, M. O. and Weiglein, G. and Weinberg, D. H. and Weinberg, E. J. and White, M. and Wiencke, L. R. and Willocq, S. and Wohl, C. G. and Womersley, J. and Woody, C. L. and Workman, R. L. and Yao, W.-M. and Zeller, G. P. and Zenin, O. V. and Zhu, R.-Y. and Zhu, S.-L. and Zimmermann, F. and Zyla, P. A. and Anderson, J. and Fuller, L. and Lugovsky, V. S. and Schaffner, P.},
-  collaboration = {Particle Data Group},
-  journal = {Phys. Rev. D},
-  volume = {98},
-  issue = {3},
-  pages = {030001},
-  numpages = {1898},
-  year = {2018},
-  month = {Aug},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.98.030001},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.98.030001}
-}
-
-@incollection{ramond2005family,
-  title={The family group in grand unified theories},
-  author={Ramond, Pierre},
-  booktitle={SEESAW 25},
-  pages={265--280},
-  year={2005},
-  publisher={World Scientific}
-}
-
-@article{asaka2005numsm,
-  title={The $\nu$MSM, dark matter and neutrino masses},
-  author={Asaka, Takehiko and Blanchet, Steve and Shaposhnikov, Mikhail},
-  journal={Physics Letters B},
-  volume={631},
-  number={4},
-  pages={151--156},
-  year={2005},
-  publisher={Elsevier}
-}
-
-
-@ARTICLE{1937ApJ,
-       author = {{Zwicky}, F.},
-        title = "{On the Masses of Nebulae and of Clusters of Nebulae}",
-      journal = {apj},
-         year = 1937,
-        month = oct,
-       volume = {86},
-        pages = {217},
-          doi = {10.1086/143864},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1937ApJ....86..217Z},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@article{garrett2011dark,
-  title={Dark matter: A primer},
-  author={Garrett, Katherine and Duda, Gintaras},
-  journal={Advances in Astronomy},
-  volume={2011},
-  year={2011},
-  publisher={Hindawi}
-}
-
-@article{aghanim2020planck,
-  title={Planck 2018 results-VI. Cosmological parameters},
-  author={Aghanim, Nabila and Akrami, Yashar and Ashdown, Mark and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, AJ and Barreiro, RB and Bartolo, N and Basak, S and others},
-  journal={Astronomy \& Astrophysics},
-  volume={641},
-  pages={A6},
-  year={2020},
-  publisher={EDP sciences}
-}
-
-
-@article{hinshaw2013nine,
-  title={Nine-year Wilkinson Microwave Anisotropy Probe (WMAP) observations: cosmological parameter results},
-  author={Hinshaw, Gary and Larson, D and Komatsu, Eiichiro and Spergel, David N and Bennett, CLaa and Dunkley, Joanna and Nolta, MR and Halpern, M and Hill, RS and Odegard, N and others},
-  journal={The Astrophysical Journal Supplement Series},
-  volume={208},
-  number={2},
-  pages={19},
-  year={2013},
-  publisher={IOP Publishing}	
-}
-
-@ARTICLE{2019FrP.....7...75G,
-       author = {{Giagu}, Stefano},
-        title = "{WIMP Dark matter searches with the ATLAS detector at the LHC}",
-      journal = {Frontiers in Physics},
-     keywords = {LHC, dark matter, ATLAS \& Compact Muon Solenoid Detector experiments, WIMP, Particle physics, Hadron collider experiments},
-         year = 2019,
-        month = may,
-       volume = {7},
-          eid = {75},
-        pages = {75},
-          doi = {10.3389/fphy.2019.00075},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019FrP.....7...75G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@article{Bergstr_m_2009,
-	doi = {10.1088/1367-2630/11/10/105006},
-	url = {https://doi.org/10.1088/1367-2630/11/10/105006},
-	year = 2009,
-	month = {oct},
-	publisher = {{IOP} Publishing},
-	volume = {11},
-	number = {10},
-	pages = {105006},
-	author = {Lars Bergström},
-	title = {Dark matter candidates},
-	journal = {New Journal of Physics},
-	abstract = {An overview is given of various dark matter candidates. Among the many suggestions given in the literature, axions, inert Higgs doublet, sterile neutrinos, supersymmetric particles and Kaluza–Klein particles are discussed. The situation has recently become very interesting with new results on antimatter in the cosmic rays having dark matter as one of the leading possible explanations. Problems arising from this explanation and possible solutions are discussed, and the importance of new measurements is emphasized. If the explanation is indeed dark matter, a whole new field of physics, with unusual although not impossible mass and interaction properties, may soon open itself to discovery.}
-}
-
-@article{beacham2019physics,
-  title={Physics beyond colliders at CERN: beyond the standard model working group report},
-  author={Beacham, James and Burrage, Clare and Curtin, David and De Roeck, Albert and Evans, J and Feng, Jonathan L and Gatto, Corrado and Gninenko, S and Hartin, Anthony and Irastorza, Igor and others},
-  journal={Journal of Physics G: Nuclear and Particle Physics},
-  volume={47},
-  number={1},
-  pages={010501},
-  year={2019},
-  publisher={IOP Publishing}
-}
-
-@article{agrawal2021feebly,
-  title={Feebly-interacting particles: FIPs 2020 workshop report},
-  author={Agrawal, Prateek and Bauer, Martin and Beacham, James and Berlin, Asher and Boyarsky, Alexey and Cebrian, Susana and Cid-Vidal, Xabier and d’Enterria, David and De Roeck, Albert and Drewes, Marco and others},
-  journal={The European Physical Journal C},
-  volume={81},
+@article{heck1998corsika,
+  title={CORSIKA: A Monte Carlo code to simulate extensive air showers},
+  author={Heck, Dieter and Knapp, J and Capdevielle, JN and Schatz, G and Thouw, T and others},
+  journal={Report fzka},
+  volume={6019},
   number={11},
-  pages={1--137},
-  year={2021},
+  year={1998},
+  publisher={Citeseer}
+}
+
+@techreport{fesefeldt1985simulation,
+  title={The simulation of hadronic showers: physics and applications},
+  author={Fesefeldt, HS},
+  year={1985}
+}
+
+@article{ostapchenko2011monte,
+  title={Monte Carlo treatment of hadronic interactions in enhanced Pomeron scheme: QGSJET-II model},
+  author={Ostapchenko, Sergey},
+  journal={Physical Review D},
+  volume={83},
+  number={1},
+  pages={014018},
+  year={2011},
+  publisher={APS}
+}
+
+@article{grinyuk2020monte,
+  title={Monte Carlo Simulation of the TAIGA Hybrid Gamma-Ray Experiment},
+  author={Grinyuk, Andrey and Postnikov, E and Sveshnikova, L},
+  journal={Physics of Atomic Nuclei},
+  volume={83},
+  number={2},
+  pages={262--267},
+  year={2020},
   publisher={Springer}
+}
+
+@article{van2008rings,
+  title={Rings and Jets around PSR J2021+ 3651: The “Dragonfly Nebula”},
+  author={Van Etten, Adam and Romani, Roger W and Ng, C-Y},
+  journal={The Astrophysical Journal},
+  volume={680},
+  number={2},
+  pages={1417},
+  year={2008},
+  publisher={IOP Publishing}
 }
 
 
